--- a/manager/src/main/resources/application.yml
+++ b/manager/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://rm-bp1z08k750hk52u6no.mysql.rds.aliyuncs.com:3306/manager?user=root&password=wch123AA&useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://10.5.16.9:3306/manager?user=wch&password=wch123&useUnicode=true&characterEncoding=utf-8
   jpa:
     show-sql: true
 #    generate-ddl: true
