--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,17 +3,21 @@ ext {
             springBootVersion: '1.5.4.RELEASE'
     ]
     libs = [
-            common      : [
+            common : [
                     "org.springframework.boot:spring-boot-starter-web:${versions.springBootVersion}",
                     "org.springframework.boot:spring-boot-starter-data-jpa:${versions.springBootVersion}",
                     "org.apache.commons:commons-lang3:3.5"
             ],
-            mysql       : [
+            mysql  : [
                     "mysql:mysql-connector-java:5.1.29"
             ],
-            test        : [
+            swagger: [
+                    "io.springfox:springfox-swagger2:2.7.0",
+                    "io.springfox:springfox-swagger-ui:2.7.0"
+            ],
+            test   : [
                     "org.springframework.boot:spring-boot-starter-test:${versions.springBootVersion}"
-                    ,"com.h2database:h2:1.4.195"
+                    , "com.h2database:h2:1.4.195"
             ]
     ]
 }
