--- a/manager/src/main/resources/application.yml
+++ b/manager/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   datasource:
-#    url: jdbc:mysql://10.5.16.9:3306/manager?user=wch&password=wch123&useUnicode=true&characterEncoding=utf-8
-    url: jdbc:h2:mem:manager;DB_CLOSE_ON_EXIT=FALSE
-  jpa:
-#    show-sql: true
-    generate-ddl: true
-    hibernate:
-      ddl-auto: create-drop
+    url: jdbc:mysql://rm-bp1g9lmfr13uj1js0o.mysql.rds.aliyuncs.com:3306/manager?user=root&password=Wchid228&useUnicode=true&characterEncoding=utf-8
+#    url: jdbc:h2:mem:manager;DB_CLOSE_ON_EXIT=FALSE
+#  jpa:
+##    show-sql: true
+#    generate-ddl: true
+#    hibernate:
+#      ddl-auto: create-drop
 server:
   context-path: /manager
   port: 8081
