--- a/manager/src/main/resources/application.yml
+++ b/manager/src/main/resources/application.yml
@@ -13,3 +13,7 @@ server:
 swagger:
   groupName: manger
   basePackage: com.imooc.manager.controller
+
+logging:
+   level:
+      com.googlecode.jsonrpc4j: debug
