--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -13,7 +13,7 @@ ext {
                     "mysql:mysql-connector-java:5.1.29"
             ],
             jsonrpc:[
-                    "com.github.briandilley.jsonrpc4j:jsonrpc4j:1.5.0"
+                    "com.imooc.jsonrpc4j:jsonrpc4j:1.5.1"
             ],
             swagger: [
                     "io.springfox:springfox-swagger2:2.7.0",
