--- a/seller/src/main/resources/application.yml
+++ b/seller/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   context-path: /seller
   port: 8082
 
-rpc.manager.url: http://localhost:8081/manager/
+rpc.manager.url: http://localhost:8081/manager
 
 logging:
   level:
