--- a/seller/src/main/resources/application.yml
+++ b/seller/src/main/resources/application.yml
@@ -2,8 +2,11 @@ server:
   context-path: /seller
   port: 8082
 
-rpc.manager.url: http://localhost:8081/manager
 
 logging:
   level:
     com.googlecode.jsonrpc4j: debug
+rpc:
+  client:
+    url:  http://localhost:8081/manager
+    basePackage: com.imooc.api
