--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,6 +19,9 @@ ext {
                     "io.springfox:springfox-swagger2:2.7.0",
                     "io.springfox:springfox-swagger-ui:2.7.0"
             ],
+            hazelcast:[
+                     'com.hazelcast:hazelcast:3.8.6'
+            ],
             test   : [
                     "org.springframework.boot:spring-boot-starter-test:${versions.springBootVersion}"
 
