--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,7 +20,8 @@ ext {
                     "io.springfox:springfox-swagger-ui:2.7.0"
             ],
             hazelcast:[
-                     'com.hazelcast:hazelcast:3.8.6'
+                     'com.hazelcast:hazelcast:3.8.6',
+                     'com.hazelcast:hazelcast-spring:3.8.6',
             ],
             test   : [
                     "org.springframework.boot:spring-boot-starter-test:${versions.springBootVersion}"
