--- a/manager/src/main/resources/application.yml
+++ b/manager/src/main/resources/application.yml
@@ -7,9 +7,13 @@ spring:
 #    generate-ddl: true
 #    hibernate:
 #      ddl-auto: create-drop
+  activemq:
+    broker-url: tcp://10.5.16.14:61616
+  jms:
+    pub-sub-domain: true
 server:
   context-path: /manager
-  port: 8081
+  port: 8084
 swagger:
   groupName: manger
   basePackage: com.imooc.manager.controller
