--- a/seller/src/main/resources/application.yml
+++ b/seller/src/main/resources/application.yml
@@ -2,7 +2,6 @@ server:
   context-path: /seller
   port: 8082
 
-
 logging:
   level:
     com.googlecode.jsonrpc4j: debug
@@ -14,6 +13,10 @@ spring:
   cache:
     type: hazelcast
   activemq:
-      broker-url: tcp://10.5.16.14:61616
-      packages:
-        trust-all: true
+    broker-url: tcp://10.5.16.14:61616
+    packages:
+      trust-all: true
+  datasource:
+    url: jdbc:mysql://10.5.16.9:3306/seller?user=wch&password=wch123&useUnicode=true&characterEncoding=utf-8
+  jpa:
+    show-sql: true
