--- a/seller/src/main/resources/application.yml
+++ b/seller/src/main/resources/application.yml
@@ -20,3 +20,9 @@ spring:
     url: jdbc:mysql://10.5.16.9:3306/seller?user=wch&password=wch123&useUnicode=true&characterEncoding=utf-8
   jpa:
     show-sql: true
+swagger:
+  basePackage: com.imooc.seller.controller
+  title: 销售端API
+  description: >
+    authId 是由本方提供给接口调用方用于安全控制及身份识别，请在需要此参数的接口上，通过请求头传递。
+    sign 是接口调用方使用私钥对请求对象中的非空字段按字典排序之后的JSON字符串进行的签名。请在需要此参数的接口上，通过请求头传递。
