--- a/manager/src/main/resources/application.yml
+++ b/manager/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss.SSS
+    time-zone: GMT+8
   datasource:
     url: jdbc:mysql://10.5.16.9:3306/manager?user=wch&password=wch123&useUnicode=true&characterEncoding=utf-8
 #    url: jdbc:h2:mem:manager;DB_CLOSE_ON_EXIT=FALSE
