--- a/seller/src/main/resources/application.yml
+++ b/seller/src/main/resources/application.yml
@@ -17,7 +17,10 @@ spring:
     packages:
       trust-all: true
   datasource:
-    url: jdbc:mysql://10.5.16.9:3306/seller?user=wch&password=wch123&useUnicode=true&characterEncoding=utf-8
+    primary:
+      url: jdbc:mysql://10.5.16.9:3306/seller?user=wch&password=wch123&useUnicode=true&characterEncoding=utf-8
+    backup:
+      url: jdbc:mysql://10.5.16.9:3306/seller-backup?user=wch&password=wch123&useUnicode=true&characterEncoding=utf-8
   jpa:
     show-sql: true
 swagger:
