--- a/manager/src/main/resources/application.yml
+++ b/manager/src/main/resources/application.yml
@@ -15,7 +15,8 @@ spring:
   jms:
     pub-sub-domain: true
 server:
-  context-path: /manager
+  servlet:
+    context-path: /manager
   port: 8081
 swagger:
   groupName: manger
