--- a/manager/src/test/resources/application.yml
+++ b/manager/src/test/resources/application.yml
@@ -7,5 +7,6 @@ spring:
     hibernate:
       ddl-auto: create-drop
 server:
-  context-path: /manager
+  servlet:
+    context-path: /manager
   port: 8081
