--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,6 +9,9 @@ ext {
                     "org.apache.commons:commons-lang3:3.5"
                     , "com.h2database:h2:1.4.195"
             ],
+            findbugs: [
+                    "com.google.code.findbugs:jsr305:1.3.9"
+            ],
             mysql  : [
                     "mysql:mysql-connector-java:5.1.29"
             ],
