--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ subprojects {
 
     repositories {
         mavenLocal()
-        maven {
-            url = 'http://nexus.vfinance.cn:9081/content/groups/public/'
-        }
+//        maven {
+//            url = 'http://nexus.vfinance.cn:9081/content/groups/public/'
+//        }
         mavenCentral()
     }
 
